--- a/angular.json
+++ b/angular.json
@@ -7,7 +7,7 @@
   },
   "newProjectRoot": "projects",
   "projects": {
-    "ato-ts-diagnostics-ui-fe": {
+    "frontend": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -21,7 +21,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/ato-ts-diagnostics-ui-fe",
+            "outputPath": "dist/frontend",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
@@ -75,10 +75,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "ato-ts-diagnostics-ui-fe:build:production"
+              "browserTarget": "frontend:build:production"
             },
             "development": {
-              "browserTarget": "ato-ts-diagnostics-ui-fe:build:development"
+              "browserTarget": "frontend:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -86,7 +86,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "ato-ts-diagnostics-ui-fe:build"
+            "browserTarget": "frontend:build"
           }
         },
         "test": {
