--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ato-ts-diagnostics-ui-fe",
-  "version": "1.0.9",
+  "name": "frontend",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
